# dJango-Wagtail-CMS-backend

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  PYTHON_BEST_PRACTICES.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
analytics/: urls.py  views.py
dashboard/: apps.py  views.py
debuttend_cms/: asgi.py  urls.py
debuttend_cms/analytics/templates/analytics/: dashboard.html
debuttend_cms/dashboard/: urls.py
debuttend_cms/dashboard/templates/dashboard/: index.html
debuttend_cms/debuttend_cms/: urls.py  wsgi.py
debuttend_cms/debuttend_cms/settings/: base.py  test.py
debuttend_cms/home/: models.py  wagtail_hooks.py
debuttend_cms/home/templates/home/: article_page.html  home_page.html
debuttend_cms/home/templates/home/blocks/: callout_block.html  hero_block.html  quote_block.html
debuttend_cms/integrations/: urls.py  views.py
debuttend_cms/integrations/templates/integrations/: list.html
debuttend_cms/search/: apps.py  urls.py  views.py
debuttend_cms/settings/: dev.py  prod.py
debuttend_cms/templates/: base.html
docs/: CI_CD.md  CI_CD_SETUP_SUMMARY.md  QUICKSTART.md
home/: apps.py  models.py  wagtail_hooks.py
integrations/templates/integrations/: detail.html
search/templates/search/: results.html
tests/: __init__.py  conftest.py  test_analytics.py  test_dashboard.py  test_home.py  test_integrations.py  test_manage.py  test_search.py  test_settings.py
